# novel-rag

./: .gitignore  pyproject.toml
configulator/: config.py
notebooks/: build_index.ipynb  experiment.ipynb  preprocess_query.ipynb  run_rag.ipynb
scripts/: build_index.py  crag.py  evaluate_retriver.py  preprocess_novel.py
src/: env.py  rag_pipline.py
src/evaluator/eval_retriever/: evaluator.py
src/generator/: generate_pipline.py
src/index_builder/: index_augmentator.py  text_preprocess.py  text_splitter.py
src/prompt/: prompts.yml
src/retrievers/: novel_retriever.py
src/retrievers/models/: bm25_retriever.py  ensemble_retriever.py  llm_retriever.py  retriver_base.py  vector_retriever.py
src/utils/: file_io.py
src/utils/call_api/: schema.py  util_openai.py
src/utils/preprocess/: text_splitter.py
